# Note_Pad_Axum

./: README.md
note_pad/: Cargo.toml
note_pad/migrations/: 20250910020648_note_pad.sql
note_pad/src/: main.rs
supabase/.temp/: pooler-url  project-ref
